feat(website-presence): prioritize no-site leads and update semana-3 docs